--- a/Offer Section/offersection.html
+++ b/Offer Section/offersection.html
@@ -3,9 +3,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://use.fontawesome.com/7d57505470.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/offersection.css">
     <title>Offer Section</title>
 </head>
 <body>
-    
+  <section class="offer-section">
+    <div class="container">
+      <div class="col-md-6 custom-bg-1">
+
+      </div>
+      <div class="col-md-3 custom-bg-2">
+
+      </div>
+      <div class="col-md-3 custom-bg-3">
+
+      </div>
+    </div>
+  </section>
 </body>
 </html>
