Added the verticle card module and also offer section

--- a/Offer Section/offersection.html
+++ b/Offer Section/offersection.html
@@ -13,14 +13,27 @@
 <body>
   <section class="offer-section">
     <div class="container">
-      <div class="col-md-6 custom-bg-1">
-
+      <div class="col-md-6 workout">
+        <div class="text-area">
+          <p><span>10%</span> OFF</p>
+          <p>ON WORKOUTS</p>
+          <button>USE CODE <span>BYG 10</span></button>
+        </div>
       </div>
-      <div class="col-md-3 custom-bg-2">
-
+      <div class="col-md-3 lowest-price">
+        <div class="text-area">
+          <p>LOWEST PRICE</p>
+          <p>GUARANTEED</p>
+          <p>or get TWICE the difference back!</p>
+        </div>
       </div>
-      <div class="col-md-3 custom-bg-3">
-
+      <div class="col-md-3 invite">
+        <div class="text-area">
+          <p>INVITE & INSPIRE</p>
+          <p>GIFT YOUR FRIENDS RS.100 AND</p>
+          <p>GET RS.100 WHEN THEY MAKE THEIR</p>
+          <p>FIRST PAID TRANSACTION</p>
+        </div>
       </div>
     </div>
   </section>
