--- a/search bar/search.html
+++ b/search bar/search.html
@@ -16,16 +16,28 @@
     <div class="container">
       <div class="main-search">
         <form>
-          <select name="city" id="">
-            <option value="0" selected disabled>CHOOSE YOUR LOCATION</option>
-            <option value="1">BANGALORE</option>
-            <option value="2">NEW DELHI</option>
-            <option value="3">GOA</option>
-          </select>
-          <input type="text" placeholder="SEARCH FOR YOUR FITNESS OPTION">
+          <input class="dropdown" name="city" id="" placeholder="CHOOSE YOUR LOCATION">
+          <input class="search-input" type="text" placeholder="SEARCH FOR YOUR FITNESS OPTION">
           <button>SEARCH</button>
           <div class="clearfix"></div>
         </form>
+        <div class="location-popup">
+          <div class="locaton-box">
+            <div class="enter-city">
+              <i class="fa fa-caret-up" aria-hidden="true"></i>
+              <input type="text" placeholder="ENTER YOUR CITY">
+              <span>OR</span>
+            </div>
+            <div class="select-city">
+              <p>SELECT CITY</p>
+              <p><a href="#">Bengaluru, </a><a href="#">Bhubaneshwar, </a><a href="#">Gurugram, </a>
+                <a href="#">Mumbai, </a><a href="#">Navi Mumbai, </a><a href="#">Pune, </a>
+                <a href="#">Thane, </a><a href="#">New Delhi, </a><a href="#">Noida, </a><a href="#">Fardabad, </a>
+                <a href="#">Gazabad, </a><a href="#">Chandgarh, </a><a href="#">Jaipur</a>
+              </p>
+            </div>            
+          </div>
+        </div>
       </div>
     </div>
   </section>
