added landing page and working on search page

--- a/index.html
+++ b/index.html
@@ -7,13 +7,23 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="css/main.css">
+  <style>
+    .main-body a{
+      display: block;
+    }
+  </style>
   <title>Document</title>
 </head>
 <body>
     <div class="content">
-      <section class="fitness-centers">
+      <section class="main-body">
         <div class="container">
-          
+          <a href="horizontal card/horizontal-card.html">Horizontal Card View</a>
+          <a href="offer section/offersection.html">Offer Section</a>
+          <a href="order block n cart/order-block.html">Order Block And Cart</a>
+          <a href="proceed to pay/proceedpay.html">Proceed To Pay</a>
+          <a href="search bar/search.html">Search Bar</a>
+          <a href="vertical card/fitnesscenters.html">Vertical Card Layout</a>
         </div>
       </section>
     </div>
