--- a/proceed to pay/proceedpay.html
+++ b/proceed to pay/proceedpay.html
@@ -12,7 +12,31 @@
   <title>Proceed To Pay</title>
 </head>
 <body>
-    <section class="proceed-pay">
-
-    </section>
+  <section class="proceed-pay">
+    <div class="container">
+      <div class="col-md-4 col-sm-6 col-xs-12 payment-block">
+        <h4 class="text-center">HAVE A PROMO CODE?</h4>
+        <p class="text-center">Apply Promocode to get discount.</p>
+        <form class="promo-form">
+          <input class="col-md-9" type="text" placeholder="Example: BYG10">
+          <button class="col-md-3">APPLY</button>
+          <div class="clearfix"></div>
+        </form>
+        <div class="subtotal">
+          <span>Sub total</span>
+          <span><i class="fa fa-inr" aria-hidden="true"></i> 400 </span>
+        </div>
+        <div class="promocode">
+          <span>Promo code</span>
+          <span><i class="fa fa-inr" aria-hidden="true"></i> 400</span>
+        </div>
+        <div class="grandtotal">
+          <span>Grand total</span>
+          <span><i class="fa fa-inr" aria-hidden="true"></i> 400</span>
+        </div>
+        <button class="pay">PROCEED TO PAY</button>
+        <button class="goback">GO TO LISTING</button>
+      </div>
+    </div>
+  </section>
 </body>
