--- a/Offer Section/offersection.html
+++ b/Offer Section/offersection.html
@@ -13,21 +13,21 @@
 <body>
   <section class="offer-section">
     <div class="container">
-      <div class="col-md-6 workout">
+      <div class="col-md-6 col-sm-12 col-xs-12 workout">
         <div class="text-area">
           <p><span>10%</span> OFF</p>
           <p>ON WORKOUTS</p>
           <button>USE CODE <span>BYG 10</span></button>
         </div>
       </div>
-      <div class="col-md-3 lowest-price">
+      <div class="col-md-3 col-sm-12 col-xs-12 lowest-price">
         <div class="text-area">
           <p>LOWEST PRICE</p>
           <p>GUARANTEED</p>
           <p>or get TWICE the difference back!</p>
         </div>
       </div>
-      <div class="col-md-3 invite">
+      <div class="col-md-3 col-sm-12 col-xs-12 invite">
         <div class="text-area">
           <p>INVITE & INSPIRE</p>
           <p>GIFT YOUR FRIENDS RS.100 AND</p>
