--- a/search bar/search.html
+++ b/search bar/search.html
@@ -16,26 +16,29 @@
     <div class="container">
       <div class="main-search">
         <form>
-          <input class="dropdown" id="dropDown" name="city" id="" placeholder="CHOOSE YOUR LOCATION">
+          <div class="dropdown" id="dropDown">
+            <p>CHOOSE YOUR LOCATION</p>
+            <div class="location-box" id="locationBox">
+              <div class="enter-city">
+                <i class="fa fa-caret-up" aria-hidden="true"></i>
+                <input type="text" placeholder="ENTER YOUR CITY">
+                <span>OR</span>
+              </div>
+              <div class="select-city">
+                <p>SELECT CITY</p>
+                <p><a href="#">Bengaluru, </a><a href="#">Bhubaneshwar, </a><a href="#">Gurugram, </a>
+                  <a href="#">Mumbai, </a><a href="#">Navi Mumbai, </a><a href="#">Pune, </a>
+                  <a href="#">Thane, </a><a href="#">New Delhi, </a><a href="#">Noida, </a><a href="#">Fardabad, </a>
+                  <a href="#">Gazabad, </a><a href="#">Chandgarh, </a><a href="#">Jaipur</a>
+                </p>
+              </div>
+            </div>
+          </div>
           <input class="search-input" type="text" placeholder="SEARCH FOR YOUR FITNESS OPTION">
           <button>SEARCH</button>
           <div class="clearfix"></div>
+          
         </form>
-        <div class="location-box" id="locationBox">
-          <div class="enter-city">
-            <i class="fa fa-caret-up" aria-hidden="true"></i>
-            <input type="text" placeholder="ENTER YOUR CITY">
-            <span>OR</span>
-          </div>
-          <div class="select-city">
-            <p>SELECT CITY</p>
-            <p><a href="#">Bengaluru, </a><a href="#">Bhubaneshwar, </a><a href="#">Gurugram, </a>
-              <a href="#">Mumbai, </a><a href="#">Navi Mumbai, </a><a href="#">Pune, </a>
-              <a href="#">Thane, </a><a href="#">New Delhi, </a><a href="#">Noida, </a><a href="#">Fardabad, </a>
-              <a href="#">Gazabad, </a><a href="#">Chandgarh, </a><a href="#">Jaipur</a>
-            </p>
-          </div>
-        </div>
         <div class="location-popup" id="locationPopup"></div>
       </div>
     </div>
